--- a/first_page.css
+++ b/first_page.css
@@ -45,7 +45,7 @@ header{
 
 #intro::before{
     content: "";
-    background: url('/Images/Intro\ Wallpaper.jpg') no-repeat center center/cover;
+    background: url('./Images/Intro\ Wallpaper.jpg') no-repeat center center/cover;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -345,7 +345,7 @@ header{
 #ending::before {
     content: "";
     position: absolute;
-    background: url('/Images/Faltu\ wallpaper.jpg')  no-repeat center center/cover ;
+    background: url('./Images/Faltu\ wallpaper.jpg')  no-repeat center center/cover ;
     height: 65%;
     width: 100%;
     z-index: -1;
