--- a/first_page.css
+++ b/first_page.css
@@ -9,19 +9,21 @@ header{
     background-color: rgb(56, 0, 0);
     position: fixed;
     width: 100%;
+    z-index: 2;
 }
 
 .nav_ul{
     padding: 10px;
     padding-left: 16px;
     display: flex;
-    width: 39%;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    /* width: 39%; */
+    /* justify-content: space-between; */
+    /* flex-wrap: wrap; */
 }
 
 .nav_ul li {
     list-style: none;
+    margin-right: 12px;
     transition-property: all;
     transition-duration: 0.3s;
 }
@@ -36,6 +38,7 @@ header{
 }
 
 #intro {
+    position: relative;
     height: 578px;
     display: flex;
     flex-direction: column;
@@ -87,16 +90,22 @@ header{
 
 .intro_para{
     display: flex;
-    width: 55%;
+    /* flex-wrap: wrap; */
+    /* width: 55%; */
     justify-content: space-between;
 }
 
 .intro_para p{
     position: relative;
-    font-size: 1.8rem;
+    font-size: 30px;
     text-align: center;
     color: rgba(255, 255, 255, 0);
     -webkit-text-stroke: 1px white;
+    margin-right: 10px;
+}
+
+#p-1{
+    margin-left: 10px;
 }
 
 #p-1::before{
@@ -342,11 +351,15 @@ header{
     width: 100%;
 }
 
+#ending{
+    position: relative;
+}
+
 #ending::before {
     content: "";
     position: absolute;
     background: url('/Images/Faltu\ wallpaper.jpg')  no-repeat center center/cover ;
-    height: 65%;
+    height: 100%;
     width: 100%;
     z-index: -1;
     opacity: 1;
@@ -380,7 +393,7 @@ header{
     display: flex;
     width: 90%;
     margin: auto;
-    padding-top: 32px;
+    /* padding-top: 32px; */
 }
 
 #gift_card_image img{
@@ -421,8 +434,13 @@ header{
 
 #container{
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
+}
+
+.binding_box{
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
 }
 
 #container li{
